-issue#590: Unable to create a plugin based menu
-issue#591: Row selection in Device Automation Templates not sane with drag-n-drop enabled
-issue: Ping email does not use a from email address
-issue: Automation does not recognize default size or poller
-issue: Unable to drag-n-drop on automation templates pages when enabled
-feature: Reorganize defaults to place more defaults on device defaults page
-feature: Update jQuery tableDnD to version 0.9

1.1.3
-issue#515: Unable to import color CSV file
-issue#519: In non-classic themes its not possible to remove Cacti log or reporting tabs
-issue#520: SQL error in graph automation
-issue#521: Cacti allows removal of Data Query Graph Template associations when they are in use
-issue#525: LAST GPRINT type not rendered correctly due to lack of escaping
-issue#530: Undefined function get_vdef in lib/rrd.php
-issue#531: Issues with TextAlign and Tick graph items
-issue#532: Unreliable scroll height causes issues in Chrome
-issue#533: User settings not cleared after saving profile
-issue#534: Automation issue with AS clause
-issue#538: Unable to rename tree folder
-issue#541: Issues with mobile graph viewing
-issue#555: DSStats SQL insert errors due to data collection issues
-issue#563: Division by zero in removespikes.php
-issue: Fixed rendering issues with HRULE's on graphs
-issue: Update jsTree to 3.3.4 version
-feature: Improved responsiveness UI tables, filters, and menus

1.1.2
-issue#492: Error while adding non data query (cg) graphs
-issue#494: CLI error while importing template
-issue#499: SQL error in graph automation resulting in no graphs on tree
-issue#500: Generic SNMP device package damaged - Unix Ping Host
-issue#505: Log rotation does not work in some cases
-issue#506: Undefined index: cactiStatsDeviceFailedPolls
-issue#507: Nextwork discovery 'export' produces no results
-issue#509: Minor bug with device ownership selection
-feature: Add new legend type that includes Current/Average/Minimum/Maximum