@@ -496,8 +496,11 @@ function utilities_view_tech($php_info = '') {
 	}else{
 		html_section_header(__('PHP Module Information'), 2);
 		form_alternate_row();
-		$php_info = str_replace('width="600"', '', $php_info);
-		$php_info = str_replace('th colspan="2"', 'th class="subHeaderColumn"', $php_info);
+		$php_info = str_replace(
+		        array('width="600"', 'th colspan="2"', ','),
+                array('', 'th class="subHeaderColumn"', ', '),
+                $php_info
+        );
 		print "<td colspan='2'>" . $php_info . "</td>\n";
 
 		form_end_row();
