@@ -14,6 +14,8 @@ Cacti CHANGELOG
 -issue: Ping email does not use a from email address
 -issue: Automation does not recognize default size or poller
 -issue: Unable to drag-n-drop on automation templates pages when enabled
+-issue: Fixed number of hosts in poller stats for first poller
+-issue: Fixed screenwidth issue in tab PHP-Info of Utilities module
 -feature: Reorganize defaults to place more defaults on device defaults page
 -feature: Update jQuery tableDnD to version 0.9
 
